fix: add min-width to popover and fix alignment (#778)
Closes #762

--- a/assets/wizards/popups/components/popup-popover/style.scss
+++ b/assets/wizards/popups/components/popup-popover/style.scss
@@ -1,3 +1,5 @@
+@import '~@wordpress/base-styles/colors';
+
 .newspack-popup-action-card-popover-control {
 	width: 100%;
 	display: flex;
@@ -8,8 +10,11 @@
 }
 
 .newspack-popup-info {
-	padding: 4px 13px;
-	background: #f7f7f7;
+	background: $light-gray-100;
+	color: $dark-gray-900;
+	font-size: 12px;
+	line-height: 16px;
+	padding: 4px 8px;
 	text-align: left;
 }
 
